# nlook-router

./: .gitignore  .goreleaser.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: release-router.yml
cmd/nlook-router/: main.go
docs/: .pdca-status.json  RELEASE.md  agent-tools-usage.md  tools-bridge-run-and-test.md
docs/.pdca-snapshots/: snapshot-1773669283842.json
internal/agentproxy/: claude.go  handler.go  handler_test.go  sanitize.go  sanitize_test.go  session.go  workspace.go  workspace_test.go
internal/apiclient/: agent.go  client.go  client_test.go  interface.go  router.go  run.go  schedule.go  workflow.go
internal/cache/: db_adapter.go  store.go  sync_handler.go
internal/chat/: handler.go  intent.go  prompt_builder.go
internal/cli/: ai_cmd.go  config_cmd.go  db_cmd.go  eval_cmd.go  output.go  output_test.go  root.go  router_cmd.go  run_daemon.go  service_cmd.go  update_cmd.go  workflow_cmd.go
internal/compression/: compressor.go  compressor_test.go  llm.go  rule.go
internal/config/: config.go  config_test.go  env.go  paths.go
internal/db/: db.go  db_test.go  entity.go  factory.go  filedb.go  filter.go  migrate.go  sqlitedb.go
internal/embedding/: embedder.go  store.go
internal/engine/: context.go  (+11 more)
tools-bridge/: README.md  pyproject.toml  requirements.txt  tokenize.py  verify_tools.py
tools-bridge/nlook_tools_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools-bridge/tests/: test_cli.py
tools-bridge/tool_bridge/: __init__.py  __main__.py  cli.py  loader.py
(+93 files in other folders)
